# CurvedShadows

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Camera.cpp  Camera.h  CurvedShadows  CurvedShadows.cbp  CurvedShadows.layout  Doxyfile  Light.cpp  Light.h  Makefile  ObjModel.cpp  ObjModel.h  README.md  Shader.cpp  Shader.h  XObjModelcpp.txt  cmake_install.cmake  help  main.cpp
Shaders/: depth_frag.glsl  depth_vert.glsl  frag_shader.glsl  light_frag_shader.glsl  light_vert_shader.glsl  vert_shader.glsl
html/: 3_819_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  3_819_82_2_compiler_id_c_2_c_make_c_compiler_id_8c_source.html  3_819_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  3_819_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  3_820_80_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  3_820_80_2_compiler_id_c_2_c_make_c_compiler_id_8c_source.html  3_820_80_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  3_820_80_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp_source.html  _c_make_cache_8txt.html  _c_make_lists_8txt.html  _camera_8cpp.html  _camera_8cpp_8o_8d.html  _camera_8cpp_8o_8d_source.html  _camera_8cpp__incl.dot  _camera_8cpp_source.html  _camera_8h.html  _camera_8h__dep__incl.dot  _camera_8h__incl.dot  _camera_8h_source.html  _light_8cpp.html  _light_8cpp_8o_8d.html  _light_8cpp_8o_8d_source.html  _light_8cpp__incl.dot  _light_8cpp_source.html  _light_8h.html  _light_8h__dep__incl.dot  _light_8h__incl.dot  _light_8h_source.html  _obj_model_8cpp.html  _obj_model_8cpp_8o_8d.html  _obj_model_8cpp_8o_8d_source.html  (+62 more)
(+140 files in other folders)
